Fix background video overlaping

--- a/src/assets/scss/components/_videoBg.scss
+++ b/src/assets/scss/components/_videoBg.scss
@@ -17,7 +17,7 @@
   z-index: -2;
 }
 .videoBg-container{
-  z-index: -1;
+  z-index: 0;
   position: absolute;
   background: rgba(0,0,0,0.5);
   top: 0;
